--- a/ocaml-fsrs/src/dune
+++ b/ocaml-fsrs/src/dune
@@ -1,8 +1,8 @@
   (library
    (name fsrs)
-   (modules fsrs models parameters scheduler utils)
+   (modules fsrs models parameters scheduler utils scheduler_basic)
    (libraries base ptime ptime.clock timedesc)
-   (flags (:standard -w -26-32-27-69-34-37))
+   (flags (:standard -w -26-32-27-69-34-37-33))
    (public_name ocaml-fsrs)
    (preprocess (pps ppx_deriving.show ppx_deriving.make))
    )
