bug fixing and, for now, passes one test case

--- a/src/dune
+++ b/src/dune
@@ -4,6 +4,7 @@
    (libraries base ptime ptime.clock timedesc)
    (flags (:standard -w -26-32-27-69-34-37-33))
    (public_name ocaml-fsrs)
+   (wrapped false)
    (preprocess (pps ppx_deriving.show ppx_deriving.make))
    )
   
