--- a/test/dune
+++ b/test/dune
@@ -1,3 +1,12 @@
 (test
  (name test_fsrs)
- (libraries ocaml-fsrs alcotest))
+ (modules test_fsrs)
+ (libraries
+   ocaml-fsrs
+   alcotest
+   base
+   ptime
+   ptime.clock
+   timedesc
+ )
+)
