--- a/ocaml-fsrs.opam
+++ b/ocaml-fsrs.opam
@@ -2,13 +2,13 @@
 opam-version: "2.0"
 synopsis: "A short synopsis"
 description: "A longer description"
-maintainer: ["Maintainer Name <maintainer@example.com>"]
-authors: ["Author Name <author@example.com>"]
+maintainer: ["Lómenoirë Mortecc. <chaosarium@duck.com>"]
+authors: ["Lómenoirë Mortecc. <chaosarium@duck.com>"]
 license: "LICENSE"
 tags: ["add topics" "to describe" "your" "project"]
-homepage: "https://github.com/username/reponame"
+homepage: "https://github.com/chaosarium/ocaml-fsrs"
 doc: "https://url/to/documentation"
-bug-reports: "https://github.com/username/reponame/issues"
+bug-reports: "https://github.com/chaosarium/ocaml-fsrs/issues"
 depends: [
   "dune" {>= "3.17"}
   "ocaml"
@@ -28,4 +28,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/username/reponame.git"
+dev-repo: "git+https://github.com/chaosarium/ocaml-fsrs.git"
